syntax = "proto3";

package order;

option go_package = "github.com/alibekkenny/simple-marketplace/order-service/proto;order";

service OrderService {
    // order related rpcs
    rpc Checkout(CheckoutRequest) returns (CheckoutResponse);
    rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message CheckoutRequest {
    int64 user_id = 1;
    string payment_method = 2; // "card", "paypal", etc.
    string shipping_address = 3;
}

message CheckoutResponse {
    int64 order_id = 1;
    string status = 2;
}

message GetOrderByIdRequest {
    int64 order_id = 1;
}
message GetOrderByIdResponse {
    Order order = 1;
}

message ListOrdersRequest {
    int64 user_id = 1;
}
message ListOrdersResponse {
    repeated Order orders = 1;
}

message Order {
    int64 id = 1;
    int64 user_id = 2;
    string status = 3;
    string created_at = 4;
    repeated OrderItem items = 5;
}

message OrderItem {
    int64 product_offer_id = 1;
    int32 quantity = 2;
    double price = 3;
}
